--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="public/assets/imgs/olt-logo-blue.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="public/assets/imgs/logo-white-blue-bg.svg" type="image/x-icon">
   <title>OLT Schools App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.min.css">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-3 p-0 ps-2">
+        <div class="side-bar bg-primary-blue-1 text-main-light-blue">
+
+          <div class="logo d-flex justify-content-center">
+            <img src="public/assets/imgs/logo-white.svg" alt="OLT Schools Logo">
+          </div>
+
+          <div class="d-flex place-items-centre py-5 px-4 bg-secondary-yellow">
+            <div class="d-flex">
+              <div class="d-flex place-items-centre"><img src="public/assets/imgs/dashboard-icon.svg" alt="board"></div>
+              <div class="fs-6 ms-5">Dashboard</div>
+              <div class="d-flex place-items-centre ms-5"><img src="public/assets/imgs/arrow-down.svg" class="face-down" alt="arrow down"></div>
+            </div>
+          </div>
+
+          <div class="dashboard-options d-flex my-3 flex-column gap-3">
+            <div class="d-flex align-items-center gap-5">
+              <div class="d-flex place-items-centre">
+                <img src="public/assets/imgs/arrow-down.svg" alt="arrow right">
+              </div>
+              <div class="">Home</div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-9"></div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
