--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>OLT Schools App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lato&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.min.css">
 </head>
 <body>
@@ -132,16 +132,16 @@
 
         </header>
 
-        <main class="mt-4 bg-primary-grey px-4 pt-3">
+        <main class="mt-6 bg-primary-grey px-4 pt-3">
           
           <div class="main-header">
             <h3 class="text-primary-blue-1 fw-bold">Dashboard</h3>
             <div class="d-flex gap-2">
               <h5 class="text-primary-blue-1">Home</h5>
               <div class="grid-item-centre">
-                <svg class="blue-right" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="arrow-right-blue" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g id="Frame 154">
-                    <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#1A54C2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   </g>
                 </svg>
               </div>
@@ -149,13 +149,161 @@
             </div>
           </div>
 
+          <div class="grid-container gap-4 mt-4">
+            <div class="main-subjects p-3">
 
+              <div class="grid-item-centre">
+                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+              </div>
+
+              <div class="">
+                <div class="text-primary-blue-1 fs-5 fw-bold">Subject &</div>
+                <div class="text-primary-blue-1 fs-5 fw-bold">Classes</div>
+                <div class="text-secondary-yellow fs-7 fw-medium">17 Topics</div>
+              </div>
+
+              <div class="d-flex align-items-center justify-content-between mt-3 px-1">
+                <div class="grid-item-centre">
+                  <img src="public/assets/imgs/young-guy-yellow-circle.svg" alt="young-guy-yellow-circle">
+                </div>
+                <div class="grid-item-centre">
+                  <svg class="arrow-right-yellow" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Frame 154">
+                      <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#DBCA16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="main-subjects p-3">
+              <div class="grid-item-centre">
+                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+              </div>
+              <div class="">
+                <div class="text-primary-blue-1 fs-5 fw-bold">Lessons &</div>
+                <div class="text-primary-blue-1 fs-5 fw-bold">CBT, CBE</div>
+                <div class="text-secondary-yellow fs-7 fw-medium">27 Lessons</div>
+              </div>
+              <div class="d-flex align-items-center justify-content-between mt-3 px-1">
+                <div class="grid-item-centre">
+                  <img src="public/assets/imgs/young-guy-yellow-circle.svg" alt="young-guy-yellow-circle">
+                </div>
+
+                <div class="grid-item-centre">
+                  <svg class="arrow-right-yellow" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Frame 154">
+                      <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#DBCA16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+            </div>
+
+            <div class="main-subjects p-3">
+              <div class="grid-item-centre">
+                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+              </div>
+              <div class="">
+                <div class="text-primary-blue-1 fs-5 fw-bold">Finance &</div>
+                <div class="text-primary-blue-1 fs-5 fw-bold">Projects</div>
+                <div class="text-secondary-yellow fs-7 fw-medium">5 Proposed Projects</div>
+              </div>
+              <div class="d-flex align-items-center justify-content-between mt-3 px-1">
+                <div class="grid-item-centre">
+                  <img src="public/assets/imgs/young-guy-yellow-circle.svg" alt="young-guy-yellow-circle">
+                </div>
+
+                <div class="grid-item-centre">
+                  <svg class="arrow-right-yellow" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Frame 154">
+                      <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#DBCA16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+            </div>
+
+            <div class="calendar px-2 py-8">
+              <div class="calendar-header d-flex flex-column gap-1">
+                <div class="fs-6 text-dark-grey">Events Calendar</div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="fs-6 text-dark-grey fw-semibold">May 2022</div>
+                  <div class="grid-item-centre">
+                    <img class="cursor-pointer" src="public/assets/imgs/calender-toggle.svg" alt="calender toggler">
+                  </div>
+                </div>
+              </div>
+
+              <div class="calendar-time d-grid mt-8 mb-3 text-white fs-8 fw-medium">
+                <div class="bg-primary-blue-1 grid-item-centre py-2 px-8">Day</div>
+                <div class="bg-primary-blue-1 grid-item-centre py-2 px-8">Week</div>
+                <div class="bg-secondary-yellow grid-item-centre py-2 px-8">Month</div>
+              </div>
+
+              <div class="calendar-day d-grid py-2 text-primary-blue-1 fs-9 fw-medium">
+                <div class="grid-item-centre">SUN</div>
+                <div class="grid-item-centre">MON</div>
+                <div class="grid-item-centre">TUE</div>
+                <div class="grid-item-centre">WED</div>
+                <div class="grid-item-centre">THU</div>
+                <div class="grid-item-centre">FRI</div>
+                <div class="grid-item-centre">SAT</div>
+              </div>
+
+              <div class="calendar-dates d-grid text-primary-blue-1 fs-7 fw-medium mt-1">
+                <div class="grid-item-centre py-2">1</div>
+                <div class="grid-item-centre py-2">2</div>
+                <div class="grid-item-centre py-2">3</div>
+                <div class="grid-item-centre py-2">4</div>
+                <div class="grid-item-centre py-2">5</div>
+                <div class="grid-item-centre py-2">6</div>
+                <div class="grid-item-centre py-2">7</div>
+                <div class="grid-item-centre py-2">8</div>
+                <div class="grid-item-centre py-2">9</div>
+                <div class="grid-item-centre py-2">10</div>
+                <div class="grid-item-centre py-2">11</div>
+                <div class="grid-item-centre py-2">12</div>
+                <div class="grid-item-centre py-2">13</div>
+                <div class="grid-item-centre py-2 text-white bg-secondary-yellow">14</div>
+                <div class="grid-item-centre py-2">15</div>
+                <div class="grid-item-centre py-2 text-white bg-secondary-yellow">16</div>
+                <div class="grid-item-centre py-2">17</div>
+                <div class="grid-item-centre py-2">18</div>
+                <div class="grid-item-centre py-2">19</div>
+                <div class="grid-item-centre py-2">20</div>
+                <div class="grid-item-centre py-2">21</div>
+                <div class="grid-item-centre py-2">22</div>
+                <div class="grid-item-centre py-2">23</div>
+                <div class="grid-item-centre py-2">24</div>
+                <div class="grid-item-centre py-2">25</div>
+                <div class="grid-item-centre py-2">26</div>
+                <div class="grid-item-centre py-2">27</div>
+                <div class="grid-item-centre py-2">28</div>
+                <div class="grid-item-centre py-2">29</div>
+                <div class="grid-item-centre py-2">30</div>
+                <div class="grid-item-centre py-2">31</div>
+              </div>
+
+            </div>
+          </div>
 
         </main>
 
       </div>
     </div>
   </div>
+  
+
+  <svg xmlns="http://www.w3.org/2000/svg">
+    <symbol id="arrow-right-yellow" width="16" height="16" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g id="Frame 154">
+        <path id="Vector" d="M6.0553 4.91584L10.4744 8.85452L6.167 12.9151" stroke="#DBCA16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      </g>
+    </symbol>
+  </svg>
+  
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
