--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="public/css/main.min.css">
 </head>
 <body>
-  <div class="container-fluid overflow-x-hidden">
-    <div class="row">
-      <div class="side-bar col-3 p-0 bg-primary-blue-1 text-main-light-blue rounded-3">
+  <div class="container-fluid position-relative overflow-x-hidden">
+      <div class="side-bar p-0 bg-primary-blue-1 text-main-light-blue">
 
         <div class="logo d-flex justify-content-center">
           <img src="public/assets/imgs/logo-white.svg" alt="OLT Schools Logo">
@@ -90,12 +89,12 @@
 
       </div>
 
-      <div class="main col-9 p-0">
+      <div class="main p-0">
 
         <header class="position-sticky top-0 bg-primary-grey shadow">
-          <div class="ms-10 row">
+          <div class="ms-10 d-flex justify-content-between">
 
-            <div class="search-bar-holder col-7 d-flex align-items-center py-8 p-0">
+            <div class="search-bar-holder d-flex align-items-center py-8 p-0">
               <div class="search-bar d-flex bg-white py-5 ps-11 pe-9">
                 <input class="caret-WATeal" type="text" placeholder="Find Something...">
 
@@ -105,8 +104,8 @@
               </div>
             </div>
 
-            <div class="header-nav col-5 d-flex align-items-center">
-              <div class="d-flex align-items-center gap-1">
+            <div class="header-nav d-flex align-items-center">
+              <div class="d-flex align-items-center gap-2">
                 
                 <div class="d-flex place-items-centre">
                   <img src="public/assets/imgs/admin-id-icon.png" alt="admin-id">
@@ -149,11 +148,11 @@
             </div>
           </div>
 
-          <div class="grid-container gap-4 mt-4">
+          <div class="grid-container-1 gap-4 mt-4">
             <div class="main-subjects p-3">
 
               <div class="grid-item-centre">
-                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+                 <img src="public/assets/imgs/lady-on-stool-blue-bg.svg" alt="lady on a stool">
               </div>
 
               <div class="">
@@ -179,7 +178,7 @@
 
             <div class="main-subjects p-3">
               <div class="grid-item-centre">
-                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+                 <img src="public/assets/imgs/lady-on-stool-blue-bg.svg" alt="lady on a stool">
               </div>
               <div class="">
                 <div class="text-primary-blue-1 fs-5 fw-bold">Lessons &</div>
@@ -203,7 +202,7 @@
 
             <div class="main-subjects p-3">
               <div class="grid-item-centre">
-                 <img src="public/assets/imgs/woman-on-stool.svg" alt="lady on a stool">
+                 <img src="public/assets/imgs/lady-on-stool-blue-bg.svg" alt="lady on a stool">
               </div>
               <div class="">
                 <div class="text-primary-blue-1 fs-5 fw-bold">Finance &</div>
@@ -287,12 +286,41 @@
               </div>
 
             </div>
+
+            <div class="notice-board px-8 py-9"></div>
+
+            <div class="calendar-activities px-2 py-6">
+
+            </div>
+          </div>
+
+          <div class="grid-container-2 mt-4 gap-4 fw-bold text-center text-tertiary-blue-1">
+            
+            <div class="grid-container-2__frames d-flex flex-column place-items-centre gap-4">
+              <div class="d-flex place-items-centre">
+                <img src="public/assets/imgs/lady-on-stool-transparent-bg.svg" alt="lady on stool">
+              </div>
+              <div class="d-flex place-items-centre">Admin / Staff</div>
+            </div>
+
+            <div class="grid-container-2__frames d-flex flex-column place-items-centre gap-4">
+              <div class="d-flex place-items-centre">
+                <img src="public/assets/imgs/lady-on-stool-transparent-bg.svg" alt="lady on stool">
+              </div>
+              <div class="d-flex place-items-centre">Student / Parent</div>
+            </div>
+
+            <div class="grid-container-2__frames d-flex flex-column place-items-centre gap-4">
+              <div class="d-flex place-items-centre">
+                <img src="public/assets/imgs/lady-on-stool-transparent-bg.svg" alt="lady on stool">
+              </div>
+              <div class="d-inline-flex place-items-centrer">Contractors / Contract</div>
+            </div>
           </div>
 
         </main>
 
       </div>
-    </div>
   </div>
   
 
