finished most part, and especially the grid-conatainer-1

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="shortcut icon" href="public/assets/imgs/logo-white-blue-bg.svg" type="image/x-icon">
   <title>OLT Schools App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lato&family=Rubik&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&family=Lato:ital,wght@0,400;0,700;1,300&family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.min.css">
 </head>
 <body>
   <div class="container-fluid position-relative overflow-x-hidden">
-      <div class="side-bar p-0 bg-primary-blue-1 text-main-light-blue">
+      <div class="side-bar p-0 bg-primary-blue-1 text-secondary-grey">
 
         <div class="logo d-flex justify-content-center">
           <img src="public/assets/imgs/logo-white.svg" alt="OLT Schools Logo">
@@ -149,6 +149,7 @@
           </div>
 
           <div class="grid-container-1 gap-4 mt-4">
+
             <div class="main-subjects p-3">
 
               <div class="grid-item-centre">
@@ -287,11 +288,43 @@
 
             </div>
 
-            <div class="notice-board px-8 py-9"></div>
+            <div class="notice-board px-8 pt-5">
+              <div class="fs-6 fw-bold text-tertiary-blue-1">Notice Board</div>
 
-            <div class="calendar-activities px-2 py-6">
+              <div class="notice-board__points mt-3 text-start d-flex flex-column gap-2">
+                <div class="point-date py-2 px-8 bg-secondary-yellow text-secondary-grey width-max-content">August 16, 2022</div>
+                <div class="text-primary-blue-1 fw-bold">The school Admission list for the previous exam.</div>
+                <div class="text-primary-blue-1 fs-8">Daniel Wales  /  20 hours ago</div>
+              </div>
 
+              <div class="notice-board__points mt-3 text-start d-flex flex-column gap-2">
+                <div class="point-date py-2 px-8 bg-secondary-yellow text-secondary-grey width-max-content">August 16, 2022</div>
+                <div class="text-primary-blue-1 fw-bold">The school Admission list for the previous exam.</div>
+                <div class="text-primary-blue-1 fs-8">Daniel Wales  /  20 hours ago</div>
+              </div>
+
+              <div class="notice-board__points mt-3 text-start d-flex flex-column gap-2">
+                <div class="point-date py-2 px-8 bg-secondary-yellow text-secondary-grey width-max-content">August 16, 2022</div>
+                <div class="text-primary-blue-1 fw-bold">The school Admission list for the previous exam.</div>
+                <div class="text-primary-blue-1 fs-8">Daniel Wales  /  20 hours ago</div>
+              </div>
             </div>
+
+            <div class="calendar-activities px-2 pt-3">
+
+              <div class="calendar-activities__header flex-column gap-1 text-secondary-yellow text-start">
+                <div class="">Calendar Activities</div>
+                <div class="fw-medium fs-7">May 14th, 2022</div>
+              </div>
+
+              <div class="activies mt-2 d-flex flex-column gap-2 text-start text-dark-grey fw-lighter">
+                <div class="">Conference for SSS2 Students at Dolgara.</div>
+                <div class="">Conference for SSS2 Students at Dolgara.</div>
+                <div class="">Conference for SSS2 Students at Dolgara.</div>
+                <div class="">Conference for SSS2 Students at Dolgara.</div>
+              </div>
+            </div>
+            
           </div>
 
           <div class="grid-container-2 mt-4 gap-4 fw-bold text-center text-tertiary-blue-1">
